Add per-use combat mode supporting all modules